Table users {
  id bigint [pk, increment]
  name varchar(255)
  email varchar(255) [unique]
  password varchar(255)
  role varchar(50)
  created_at timestamp
  updated_at timestamp
}

Table kontrakans {
  id bigint [pk, increment]
  nama varchar(255)
  alamat text
  harga int
  jarak decimal(5,2)
  status varchar(50)
  foto varchar(255)
  created_at timestamp
  updated_at timestamp
}

Table bookings {
  id bigint [pk, increment]
  kontrakan_id bigint [ref: > kontrakans.id]
  user_id bigint [ref: > users.id]
  start_date date
  end_date date
  status varchar(50)
  amount decimal(12,2)
  payment_status varchar(50)
  created_at timestamp
  updated_at timestamp
}

Table laundry {
  id bigint [pk, increment]
  nama varchar(255)
  alamat text
  status varchar(50)
  foto varchar(255)
  created_at timestamp
  updated_at timestamp
}

Table layanan_laundry {
  id bigint [pk, increment]
  laundry_id bigint [ref: > laundry.id]
  nama_paket varchar(255)
  harga decimal(10,2)
  status varchar(50)
  created_at timestamp
  updated_at timestamp
}

Table reviews {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  type varchar(50)
  item_id int
  rating int
  review text
  created_at timestamp
  updated_at timestamp
}

Table galeri {
  id bigint [pk, increment]
  type varchar(50)
  item_id int
  foto varchar(255)
  is_primary boolean
  created_at timestamp
  updated_at timestamp
}
